# PARSE-RNA

./: .gitignore  1GID.json  CMakeLists.txt  PORT_DEVIATIONS.md  README.md
.github/workflows/: ci.yml
apps/: main.cpp
apps/differential/: differential_commands.cpp  differential_commands.hpp
apps/support/: cli_support.cpp  cli_support.hpp
include/pairfinder/: pipeline.hpp
include/pairfinder/algorithms/: base_frame_calculator.hpp  candidate_finder.hpp  carbonyl_margin.hpp  classify_pair.hpp  confidence.hpp  edge_classifier.hpp  hbond_patterns.hpp  quality_scorer.hpp  rigid_body.hpp  rna_chains.hpp  saenger.hpp  score_candidates.hpp  selection.hpp  template_aligner.hpp
include/pairfinder/algorithms/hbond/: chemistry.hpp  finder.hpp  hbond.hpp
include/pairfinder/core/: atom.hpp  atom_type.hpp  base_typing.hpp  chain.hpp  nucleotide_registry.hpp  reference_frame.hpp  residue.hpp  resource_locator.hpp  structure.hpp
include/pairfinder/geometry/: superposition.hpp  vector3d.hpp
include/pairfinder/io/: pdb_parser.hpp
include/pairfinder/scoring/: pair_parameters.hpp  richardson.hpp  scorer.hpp  torsions.hpp
integrations/pymol/: README.md  parse-view  parse_pymol.py
resources/: richardson_suites.json
resources/basepair-idealized/: hbond_patterns_cache.json  summary.json
resources/config/: base_typing_cache.json  hbond_chemistry_cache.json  ligand_hbond_db.json
resources/reference/: backbone_prosco_distributions.json  parameter_distributions.json  penalty_weights.json  prosco_distributions.json  z_tables.json
src/: pipeline.cpp
src/algorithms/: base_frame_calculator.cpp  candidate_finder.cpp  carbonyl_margin.cpp  classify_pair.cpp  confidence.cpp  edge_classifier.cpp  hbond_patterns.cpp  quality_scorer.cpp  rigid_body.cpp  rna_chains.cpp  saenger.cpp  score_candidates.cpp  selection.cpp  template_aligner.cpp
src/algorithms/hbond/: chemistry.cpp  finder.cpp
src/core/: atom_type.cpp  base_typing.cpp  nucleotide_registry.cpp  residue.cpp  resource_locator.cpp
src/geometry/: superposition.cpp
src/io/: pdb_parser.cpp
src/scoring/: pair_parameters.cpp  richardson.cpp  scorer.cpp  torsions.cpp
tests/: CMakeLists.txt  base_typing_test.cpp  core_smoke_test.cpp  hbond_chemistry_test.cpp  nucleotide_registry_test.cpp  parse_res_seq_test.cpp  saenger_test.cpp  selection_planarity_test.cpp  suiteness_test.cpp  superposition_test.cpp  test_helpers.hpp  validate_pair_test.cpp
tests/differential/: diff_candidates.py  diff_cif.py  diff_classified.py  diff_frames.py  diff_hbonds.py  diff_json.py  diff_lwclass.py  diff_pairs.py  diff_parse.py  diff_scored.py  diff_scores.py  diff_structure.py
